Fixing and recommitting the jenkinsfile

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,12 @@
-pipeline {
+pipeline { 
       agent any
-          stages {
+         stages {
                stage('Clone Repository') {
                steps {
                checkout scm
                }
-          }
-          stage('Build Image') {
+         }
+         stage('Build Image') {
                steps {
                sh "docker build -t johnenoel/capstone_image ."
                }
@@ -16,7 +16,7 @@ pipeline {
                sh 'docker push johnenoel/capstone_image'
                }
          }
-         Stage('copy the deployment & service files') {
+         stage('copy the deployment & service files') {
                steps {
                sh "scp -o StrictHostKeyChecking=no gowebapp-deployment.yaml ec2-user@54.204.128.29:/home/ec2-user"
                sh "scp -o StrictHostKeyChecking=no gowebapp-service.yaml ec2-user@54.204.128.29:/home/ec2-user"
@@ -24,7 +24,7 @@ pipeline {
                sh "scp -o StrictHostKeyChecking=no k8s-deploy.yml ec2-user@54.204.128.29:/home/ec2-user"
                }
          }       
-         stage('Starting minikube') {
+         stage('Start minikube process') {
                steps {
                sh 'ssh ec2-user@54.204.128.29 minikube start --vm-driver=none'
                sh 'logout'    
@@ -36,7 +36,7 @@ pipeline {
                sh 'ansible-playbook k8s-service.yml'
                }
          }
-         stage('Checking my deployments, pods and service') {
+         stage('Listing my deployments, pods and service') {
                steps {
                sh 'ssh ec2-user@54.204.128.29 kubectl get all'
                sh 'minikube service my-goweb-service'
