--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
          } 
          stage('Start the minikube service') {
                steps {
-               sh 'ssh ec2-user@54.204.128.29 minikube start --vm-driever=none'
+               sh 'ssh ec2-user@54.204.128.29 minikube start --vm-driver=none'
                }
          }
          stage('Make the deployment now') {
