--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,6 +24,11 @@ pipeline {
                sh "scp -o StrictHostKeyChecking=no k8s-deploy.yml ec2-user@54.204.128.29:/home/ec2-user"
                }
          } 
+         stage('Validate connection between both instances') {
+               steps {
+               sh 'ansible -m ping all'
+               }
+         } 
          stage('Make the deployment now') {
                steps {
                sh 'ansible-playbook k8s-deploy.yml'
