--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,9 +45,9 @@ pipeline {
                sh 'ssh ec2-user@54.204.128.29 minikube service my-goweb-service'
                }
          }
-         stage('Testing') {
+         stage('Testing: curling the url') {
               steps {
-                    echo 'Testing...'
+              sh 'curl http://172.31.82.69:31555'
               }
          }
     }
